Minor punctuation change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ js:
       </div>
       <div class="bullet-content">
         <h2>Get involved</h2>
-        <p>Keeping the Cyber Ecosystem clean is a shared responsibility. There’s no better way to make an impact than to become an active advocate yourself by joining our mailing list or becoming a CyberGreen supporter or sponsor</p>
+        <p>Keeping the Cyber Ecosystem clean is a shared responsibility. There’s no better way to make an impact than to become an active advocate yourself by joining our mailing list or becoming a CyberGreen supporter or sponsor.</p>
       </div>
     </li>
   </ul>
